tarea1-cpp/lab1-test-dir/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParCPP.y
-----------------------------------------------------------------------------

state 38 contains 1 shift/reduce conflicts.
state 55 contains 1 shift/reduce conflicts.
state 245 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pListStm -> ListStm                         (6)
	%start_pQId -> QId                                 (7)
	%start_pQConst -> QConst                           (8)
	%start_pListQId -> ListQId                         (9)
	%start_pExp16 -> Exp16                             (10)
	%start_pListString -> ListString                   (11)
	%start_pExp15 -> Exp15                             (12)
	%start_pExp14 -> Exp14                             (13)
	%start_pExp13 -> Exp13                             (14)
	%start_pExp12 -> Exp12                             (15)
	%start_pExp11 -> Exp11                             (16)
	%start_pExp10 -> Exp10                             (17)
	%start_pExp9 -> Exp9                               (18)
	%start_pExp8 -> Exp8                               (19)
	%start_pExp4 -> Exp4                               (20)
	%start_pExp3 -> Exp3                               (21)
	%start_pExp2 -> Exp2                               (22)
	%start_pExp1 -> Exp1                               (23)
	%start_pExp -> Exp                                 (24)
	%start_pExp5 -> Exp5                               (25)
	%start_pExp6 -> Exp6                               (26)
	%start_pExp7 -> Exp7                               (27)
	%start_pListExp -> ListExp                         (28)
	%start_pBuilInType -> BuilInType                   (29)
	%start_pType -> Type                               (30)
	%start_pListType -> ListType                       (31)
	%start_pListId -> ListId                           (32)
	Integer -> L_integ                                 (33)
	Double -> L_doubl                                  (34)
	Char -> L_charac                                   (35)
	String -> L_quoted                                 (36)
	Id -> L_Id                                         (37)
	Program -> ListDef                                 (38)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (39)
	Def -> Type Id '(' ListArg ')' ';'                 (40)
	Def -> 'using' QConst ';'                          (41)
	Def -> 'typedef' Type Id ';'                       (42)
	Def -> Type ListId ';'                             (43)
	ListDef ->                                         (44)
	ListDef -> ListDef Def                             (45)
	Arg -> Type Id                                     (46)
	Arg -> 'const' Arg                                 (47)
	Arg -> Type                                        (48)
	ListArg ->                                         (49)
	ListArg -> Arg                                     (50)
	ListArg -> Arg ',' ListArg                         (51)
	Stm -> ';'                                         (52)
	Stm -> Exp ';'                                     (53)
	Stm -> Type ListId ';'                             (54)
	Stm -> Type Id '=' Exp ';'                         (55)
	Stm -> 'return' Exp ';'                            (56)
	Stm -> 'return' ';'                                (57)
	Stm -> 'while' '(' Exp ')' Stm                     (58)
	Stm -> '{' ListStm '}'                             (59)
	Stm -> 'if' '(' Exp ')' Stm                        (60)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (61)
	Stm -> 'for' '(' Stm Exp ';' Exp ')' Stm           (62)
	Stm -> 'typedef' Type Id ';'                       (63)
	Stm -> 'const' Type Exp2 ';'                       (64)
	ListStm ->                                         (65)
	ListStm -> ListStm Stm                             (66)
	QId -> Id                                          (67)
	QId -> Id '<' ListType '>'                         (68)
	QConst -> ListQId                                  (69)
	ListQId -> QId                                     (70)
	ListQId -> QId '::' ListQId                        (71)
	Exp16 -> 'true'                                    (72)
	Exp16 -> 'false'                                   (73)
	Exp16 -> Integer                                   (74)
	Exp16 -> Double                                    (75)
	Exp16 -> Char                                      (76)
	Exp16 -> ListString                                (77)
	Exp16 -> '(' Exp ')'                               (78)
	ListString -> String                               (79)
	ListString -> String ListString                    (80)
	Exp15 -> QConst                                    (81)
	Exp15 -> Id '[' Exp ']'                            (82)
	Exp15 -> Id '(' ListExp ')'                        (83)
	Exp15 -> Exp16                                     (84)
	Exp14 -> Exp15 '.' Exp15                           (85)
	Exp14 -> Exp15 '->' Exp15                          (86)
	Exp14 -> Exp15 '++'                                (87)
	Exp14 -> Exp15 '--'                                (88)
	Exp14 -> '*' Exp15                                 (89)
	Exp14 -> Exp15                                     (90)
	Exp13 -> '++' Exp14                                (91)
	Exp13 -> '--' Exp14                                (92)
	Exp13 -> '!' Exp14                                 (93)
	Exp13 -> Exp14                                     (94)
	Exp12 -> Exp12 '*' Exp13                           (95)
	Exp12 -> Exp12 '/' Exp13                           (96)
	Exp12 -> Exp12 '%' Exp13                           (97)
	Exp12 -> Exp13                                     (98)
	Exp11 -> Exp11 '+' Exp12                           (99)
	Exp11 -> Exp11 '-' Exp12                           (100)
	Exp11 -> Exp12                                     (101)
	Exp10 -> Exp10 '<<' Exp11                          (102)
	Exp10 -> Exp10 '>>' Exp11                          (103)
	Exp10 -> Exp11                                     (104)
	Exp9 -> Exp9 '<' Exp10                             (105)
	Exp9 -> Exp9 '>' Exp10                             (106)
	Exp9 -> Exp9 '<=' Exp10                            (107)
	Exp9 -> Exp9 '>=' Exp10                            (108)
	Exp9 -> Exp10                                      (109)
	Exp8 -> Exp8 '==' Exp9                             (110)
	Exp8 -> Exp8 '!=' Exp9                             (111)
	Exp8 -> Exp9                                       (112)
	Exp4 -> Exp4 '&&' Exp5                             (113)
	Exp4 -> Exp5                                       (114)
	Exp3 -> Exp3 '||' Exp4                             (115)
	Exp3 -> Exp4                                       (116)
	Exp2 -> Exp3 '=' Exp2                              (117)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (118)
	Exp2 -> Exp3                                       (119)
	Exp1 -> 'throw' Exp2                               (120)
	Exp1 -> Exp2                                       (121)
	Exp -> Exp1                                        (122)
	Exp5 -> Exp6                                       (123)
	Exp6 -> Exp7                                       (124)
	Exp7 -> Exp8                                       (125)
	ListExp ->                                         (126)
	ListExp -> Exp                                     (127)
	ListExp -> Exp ',' ListExp                         (128)
	BuilInType -> 'bool'                               (129)
	BuilInType -> 'int'                                (130)
	BuilInType -> 'double'                             (131)
	BuilInType -> 'void'                               (132)
	Type -> BuilInType                                 (133)
	Type -> QConst                                     (134)
	Type -> Type '&'                                   (135)
	ListType -> Type                                   (136)
	ListType -> Type ',' ListType                      (137)
	ListId -> Id                                       (138)
	ListId -> Id ',' ListId                            (139)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'->'           { PT _ (TS _ 14) }
	'.'            { PT _ (TS _ 15) }
	'/'            { PT _ (TS _ 16) }
	':'            { PT _ (TS _ 17) }
	'::'           { PT _ (TS _ 18) }
	';'            { PT _ (TS _ 19) }
	'<'            { PT _ (TS _ 20) }
	'<<'           { PT _ (TS _ 21) }
	'<='           { PT _ (TS _ 22) }
	'='            { PT _ (TS _ 23) }
	'=='           { PT _ (TS _ 24) }
	'>'            { PT _ (TS _ 25) }
	'>='           { PT _ (TS _ 26) }
	'>>'           { PT _ (TS _ 27) }
	'?'            { PT _ (TS _ 28) }
	'['            { PT _ (TS _ 29) }
	']'            { PT _ (TS _ 30) }
	'bool'         { PT _ (TS _ 31) }
	'const'        { PT _ (TS _ 32) }
	'double'       { PT _ (TS _ 33) }
	'else'         { PT _ (TS _ 34) }
	'false'        { PT _ (TS _ 35) }
	'for'          { PT _ (TS _ 36) }
	'if'           { PT _ (TS _ 37) }
	'int'          { PT _ (TS _ 38) }
	'return'       { PT _ (TS _ 39) }
	'throw'        { PT _ (TS _ 40) }
	'true'         { PT _ (TS _ 41) }
	'typedef'      { PT _ (TS _ 42) }
	'using'        { PT _ (TS _ 43) }
	'void'         { PT _ (TS _ 44) }
	'while'        { PT _ (TS _ 45) }
	'{'            { PT _ (TS _ 46) }
	'||'           { PT _ (TS _ 47) }
	'}'            { PT _ (TS _ 48) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pListStm rule  6
	%start_pQId     rule  7
	%start_pQConst  rule  8
	%start_pListQId rule  9
	%start_pExp16   rule  10
	%start_pListString rule  11
	%start_pExp15   rule  12
	%start_pExp14   rule  13
	%start_pExp13   rule  14
	%start_pExp12   rule  15
	%start_pExp11   rule  16
	%start_pExp10   rule  17
	%start_pExp9    rule  18
	%start_pExp8    rule  19
	%start_pExp4    rule  20
	%start_pExp3    rule  21
	%start_pExp2    rule  22
	%start_pExp1    rule  23
	%start_pExp     rule  24
	%start_pExp5    rule  25
	%start_pExp6    rule  26
	%start_pExp7    rule  27
	%start_pListExp rule  28
	%start_pBuilInType rule  29
	%start_pType    rule  30
	%start_pListType rule  31
	%start_pListId  rule  32
	Integer         rule  33
	Double          rule  34
	Char            rule  35
	String          rule  36
	Id              rule  37
	Program         rule  38
	Def             rules 39, 40, 41, 42, 43
	ListDef         rules 44, 45
	Arg             rules 46, 47, 48
	ListArg         rules 49, 50, 51
	Stm             rules 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64
	ListStm         rules 65, 66
	QId             rules 67, 68
	QConst          rule  69
	ListQId         rules 70, 71
	Exp16           rules 72, 73, 74, 75, 76, 77, 78
	ListString      rules 79, 80
	Exp15           rules 81, 82, 83, 84
	Exp14           rules 85, 86, 87, 88, 89, 90
	Exp13           rules 91, 92, 93, 94
	Exp12           rules 95, 96, 97, 98
	Exp11           rules 99, 100, 101
	Exp10           rules 102, 103, 104
	Exp9            rules 105, 106, 107, 108, 109
	Exp8            rules 110, 111, 112
	Exp4            rules 113, 114
	Exp3            rules 115, 116
	Exp2            rules 117, 118, 119
	Exp1            rules 120, 121
	Exp             rule  122
	Exp5            rule  123
	Exp6            rule  124
	Exp7            rule  125
	ListExp         rules 126, 127, 128
	BuilInType      rules 129, 130, 131, 132
	Type            rules 133, 134, 135
	ListType        rules 136, 137
	ListId          rules 138, 139

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         reduce using rule 44
	'double'       reduce using rule 44
	'int'          reduce using rule 44
	'typedef'      reduce using rule 44
	'using'        reduce using rule 44
	'void'         reduce using rule 44
	L_Id           reduce using rule 44
	%eof           reduce using rule 44

	Program        goto state 131
	ListDef        goto state 132

State 1

	%start_pDef -> . Def                                (rule 1)

	'bool'         shift, and enter state 45
	'double'       shift, and enter state 46
	'int'          shift, and enter state 47
	'typedef'      shift, and enter state 129
	'using'        shift, and enter state 130
	'void'         shift, and enter state 48
	L_Id           shift, and enter state 37

	Id             goto state 38
	Def            goto state 127
	QId            goto state 39
	QConst         goto state 40
	ListQId        goto state 41
	BuilInType     goto state 42
	Type           goto state 128

State 2

	%start_pListDef -> . ListDef                        (rule 2)

	'bool'         reduce using rule 44
	'double'       reduce using rule 44
	'int'          reduce using rule 44
	'typedef'      reduce using rule 44
	'using'        reduce using rule 44
	'void'         reduce using rule 44
	L_Id           reduce using rule 44
	%eof           reduce using rule 44

	ListDef        goto state 126

State 3

	%start_pArg -> . Arg                                (rule 3)

	'bool'         shift, and enter state 45
	'const'        shift, and enter state 124
	'double'       shift, and enter state 46
	'int'          shift, and enter state 47
	'void'         shift, and enter state 48
	L_Id           shift, and enter state 37

	Id             goto state 38
	Arg            goto state 125
	QId            goto state 39
	QConst         goto state 40
	ListQId        goto state 41
	BuilInType     goto state 42
	Type           goto state 123

State 4

	%start_pListArg -> . ListArg                        (rule 4)

	'bool'         shift, and enter state 45
	'const'        shift, and enter state 124
	'double'       shift, and enter state 46
	'int'          shift, and enter state 47
	'void'         shift, and enter state 48
	L_Id           shift, and enter state 37
	%eof           reduce using rule 49

	Id             goto state 38
	Arg            goto state 121
	ListArg        goto state 122
	QId            goto state 39
	QConst         goto state 40
	ListQId        goto state 41
	BuilInType     goto state 42
	Type           goto state 123

State 5

	%start_pStm -> . Stm                                (rule 5)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	';'            shift, and enter state 113
	'bool'         shift, and enter state 45
	'const'        shift, and enter state 114
	'double'       shift, and enter state 46
	'false'        shift, and enter state 81
	'for'          shift, and enter state 115
	'if'           shift, and enter state 116
	'int'          shift, and enter state 47
	'return'       shift, and enter state 117
	'throw'        shift, and enter state 82
	'true'         shift, and enter state 83
	'typedef'      shift, and enter state 118
	'void'         shift, and enter state 48
	'while'        shift, and enter state 119
	'{'            shift, and enter state 120
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	Stm            goto state 109
	QId            goto state 39
	QConst         goto state 110
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 65
	Exp8           goto state 66
	Exp4           goto state 67
	Exp3           goto state 68
	Exp2           goto state 69
	Exp1           goto state 70
	Exp            goto state 111
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74
	BuilInType     goto state 42
	Type           goto state 112

State 6

	%start_pListStm -> . ListStm                        (rule 6)

	'!'            reduce using rule 65
	'('            reduce using rule 65
	'*'            reduce using rule 65
	'++'           reduce using rule 65
	'--'           reduce using rule 65
	';'            reduce using rule 65
	'bool'         reduce using rule 65
	'const'        reduce using rule 65
	'double'       reduce using rule 65
	'false'        reduce using rule 65
	'for'          reduce using rule 65
	'if'           reduce using rule 65
	'int'          reduce using rule 65
	'return'       reduce using rule 65
	'throw'        reduce using rule 65
	'true'         reduce using rule 65
	'typedef'      reduce using rule 65
	'void'         reduce using rule 65
	'while'        reduce using rule 65
	'{'            reduce using rule 65
	L_integ        reduce using rule 65
	L_doubl        reduce using rule 65
	L_charac       reduce using rule 65
	L_quoted       reduce using rule 65
	L_Id           reduce using rule 65
	%eof           reduce using rule 65

	ListStm        goto state 108

State 7

	%start_pQId -> . QId                                (rule 7)

	L_Id           shift, and enter state 37

	Id             goto state 38
	QId            goto state 107

State 8

	%start_pQConst -> . QConst                          (rule 8)

	L_Id           shift, and enter state 37

	Id             goto state 38
	QId            goto state 39
	QConst         goto state 106
	ListQId        goto state 41

State 9

	%start_pListQId -> . ListQId                        (rule 9)

	L_Id           shift, and enter state 37

	Id             goto state 38
	QId            goto state 39
	ListQId        goto state 105

State 10

	%start_pExp16 -> . Exp16                            (rule 10)

	'('            shift, and enter state 77
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Exp16          goto state 104
	ListString     goto state 58

State 11

	%start_pListString -> . ListString                  (rule 11)

	L_quoted       shift, and enter state 86

	String         goto state 54
	ListString     goto state 103

State 12

	%start_pExp15 -> . Exp15                            (rule 12)

	'('            shift, and enter state 77
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 102

State 13

	%start_pExp14 -> . Exp14                            (rule 13)

	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 101

State 14

	%start_pExp13 -> . Exp13                            (rule 14)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 100

State 15

	%start_pExp12 -> . Exp12                            (rule 15)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 99

State 16

	%start_pExp11 -> . Exp11                            (rule 16)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 98

State 17

	%start_pExp10 -> . Exp10                            (rule 17)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 97

State 18

	%start_pExp9 -> . Exp9                              (rule 18)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 96

State 19

	%start_pExp8 -> . Exp8                              (rule 19)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 65
	Exp8           goto state 95

State 20

	%start_pExp4 -> . Exp4                              (rule 20)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 65
	Exp8           goto state 66
	Exp4           goto state 94
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74

State 21

	%start_pExp3 -> . Exp3                              (rule 21)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 65
	Exp8           goto state 66
	Exp4           goto state 67
	Exp3           goto state 93
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74

State 22

	%start_pExp2 -> . Exp2                              (rule 22)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 65
	Exp8           goto state 66
	Exp4           goto state 67
	Exp3           goto state 68
	Exp2           goto state 92
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74

State 23

	%start_pExp1 -> . Exp1                              (rule 23)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'throw'        shift, and enter state 82
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 65
	Exp8           goto state 66
	Exp4           goto state 67
	Exp3           goto state 68
	Exp2           goto state 69
	Exp1           goto state 91
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74

State 24

	%start_pExp -> . Exp                                (rule 24)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'throw'        shift, and enter state 82
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 65
	Exp8           goto state 66
	Exp4           goto state 67
	Exp3           goto state 68
	Exp2           goto state 69
	Exp1           goto state 70
	Exp            goto state 90
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74

State 25

	%start_pExp5 -> . Exp5                              (rule 25)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 65
	Exp8           goto state 66
	Exp5           goto state 89
	Exp6           goto state 73
	Exp7           goto state 74

State 26

	%start_pExp6 -> . Exp6                              (rule 26)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 65
	Exp8           goto state 66
	Exp6           goto state 88
	Exp7           goto state 74

State 27

	%start_pExp7 -> . Exp7                              (rule 27)

	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 84
	L_charac       shift, and enter state 85
	L_quoted       shift, and enter state 86
	L_Id           shift, and enter state 37

	Integer        goto state 51
	Double         goto state 52
	Char           goto state 53
	String         goto state 54
	Id             goto state 55
	QId            goto state 39
	QConst         goto state 56
	ListQId        goto state 41
	Exp16          goto state 57
	ListString     goto state 58
	Exp15          goto state 59
	Exp14          goto state 60
	Exp13          goto state 61
	Exp12          goto state 62
	Exp11          goto state 63
	Exp10          goto state 64
	Exp9           goto state 65
	Exp8           goto state 66
	Exp7           goto state 87

State 28

	%start_pListExp -> . ListExp                        (rule 28)
